# bigami-sheet-api

./: .gitignore  Makefile  README.md  air.toml  docker-compose.yml  go.mod  go.sum  gqlgen.yml  pyproject.toml  server.go  sqlboiler.toml
app/: main.py
app/domain/entities/: belief.py  entity.py  lower_school.py  rank.py  school.py
app/domain/repositories/: i_belief_repository.py  i_lower_school_repository.py  i_rank_repository.py  i_school_repository.py
app/interfaces/controllers/: belief_controller.py  lower_school_controller.py  rank_controller.py  school_controller.py
app/interfaces/graphql/: query.py  resolver.py
cmd/: server.go
db/migrations/: 000001_create_schools_table.up.sql  000002_create_lower_schools_table.up.sql  000003_create_ranks_table.up.sql  000004_insert_schools_data.down.sql  000004_insert_schools_data.up.sql
docker/api/: Dockerfile
docker/go/: Dockerfile
golang/: Makefile  docker-compose.yml  go.mod  go.sum  gqlgen.yml  sqlboiler.toml
golang/cmd/: server.go
golang/db/migrations/: 000001_create_schools_table.up.sql  000002_create_lower_schools_table.down.sql  000003_create_ranks_table.up.sql  000005_insert_lower_schools_data.down.sql  000005_insert_lower_schools_data.up.sql
golang/docker/go/: Dockerfile
golang/internal/contoller/: school_controller.go
graph/: generated.go  resolver.go  schema.resolvers.go
internal/domain/entity/: school.go
internal/domain/repositories/: school_repository.go
internal/infrastructure/graphql/: generated.go  schema.graphqls  (+1 more)
internal/usecase/: fetch_all_schools_usecase.go
(+43 files in other folders)
